vendor/num_enum/tests/try_build/compile_fail/unpexpected_default.rs
#[derive(num_enum::UnsafeFromPrimitive)]
#[repr(u8)]
enum Numbers {
    Zero,
    #[num_enum(default)]
    NoneZero,
}

fn main() {

}
