vendor/num_enum/tests/try_build/compile_fail/unpexpected_default.stderr
error: #[derive(UnsafeFromPrimitive)] does not support `#[num_enum(default)]`
 --> $DIR/unpexpected_default.rs:5:16
  |
5 |     #[num_enum(default)]
  |                ^^^^^^^
